# langchain-eval

./: .gitignore  README.md  SPEC.md  pyproject.toml
app/: dashboard.py  dashboard_data.py  dashboard_views.py
evals/: harness.py  reporting.py  scenarios.py
evals/runs/memory-run-20260301-044553-7a074755/: probe_results.jsonl  run_summary.json  turn_traces.jsonl
src/agent/: cli.py  memory.py
